address PR comments - route to '/' on signout and fix collapsed menu alignment

--- a/src/styles/FNavbar.css
+++ b/src/styles/FNavbar.css
@@ -31,3 +31,7 @@
   .right-align {
     margin-left: auto;
   }
+
+  .collapsed-navbar-align{
+    text-align: right;
+  }
